fix chart alignment in myview

--- a/client/src/styles/frontpage.css
+++ b/client/src/styles/frontpage.css
@@ -1,4 +1,4 @@
-.container {
+.container-frontpage {
   /* width: 100%; */
   /* height: 100vh; */
   /* background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3)); */
@@ -21,18 +21,18 @@
   height: 100vh;
 }
 
-.content {
+.content-frontpage {
   text-align: center;
 }
 
-.content h1 {
+.content-frontpage h1 {
   font-size: 120px;
   color: #fff;
   font-weight: 600;
   transition: 0.5s;
 }
 
-.content h1:hover {
+.content-frontpage h1:hover {
   -webkit-text-stroke: 2px #fff;
   color: transparent;
 }
@@ -63,31 +63,31 @@
 }
 
 @media screen and (max-width: 600px) {
-  .content h1 {
+  .content-frontpage h1 {
     font-size: 46px;
   }
 }
 
 @media screen and (min-width: 600px) {
-  .content h1 {
+  .content-frontpage h1 {
     font-size: 48px;
   }
 }
 
 @media screen and (min-width: 900px) {
-  .content h1 {
+  .content-frontpage h1 {
     font-size: 72px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .content h1 {
+  .content-frontpage h1 {
     font-size: 106px;
   }
 }
 
 @media screen and (min-width: 1920px) {
-  .content h1 {
+  .content-frontpage h1 {
     font-size: 120px;
   }
 }
